--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
     <!--<module>gemfire</module>-->
     <module>infinispan</module>
     <module>jdbc</module>
-    <module>mapkeeper</module>
+    <!--<module>mapkeeper</module>-->
     <module>mongodb</module>
     <module>orientdb</module>
     <!--module>nosqldb</module-->
